# ParallelCompressor

./: .gitignore  CMakeLists.txt  README.md
src/: CompressionWorker.cpp  CompressionWorker.h  MainWindow.cpp  MainWindow.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
